[tool.poetry]
name = "herondata"
version = "0.1.0"
description = ""
authors = ["jr200 <jayshan+git@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.7"
scipy = "1.6.1"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
matplotlib = "^3.5.3"
statsmodels = "^0.13.2"
jellyfish = "^0.9.0"
transformers = {extras = ["torch"], version = "^4.21.1"}


[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.4.5"
nbconvert = "^6.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
